tests/grammar/snapshots/r#mod__grammar__alpha034__comment.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"\n        // This is a comment\n        1 + 2\n    \")"
---
Ok(
    (
        Statement(
            [
                (
                    Comment(
                        (
                            " This is a comment",
                            11..29,
                        ),
                    ),
                    9..29,
                ),
                (
                    Expression(
                        (
                            Add(
                                (
                                    Number(
                                        (
                                            1.0,
                                            38..39,
                                        ),
                                    ),
                                    38..39,
                                ),
                                (
                                    Number(
                                        (
                                            2.0,
                                            42..43,
                                        ),
                                    ),
                                    42..43,
                                ),
                            ),
                            38..43,
                        ),
                    ),
                    38..43,
                ),
            ],
        ),
        9..43,
    ),
)
