tests/grammar/snapshots/r#mod__grammar__alpha034__eq-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1 + 2 == 2 + 1\").unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Eq(
                        Add(
                            Number(
                                1.0,
                            ),
                            (),
                            Number(
                                2.0,
                            ),
                        ),
                        (),
                        Add(
                            Number(
                                2.0,
                            ),
                            (),
                            Number(
                                1.0,
                            ),
                        ),
                    ),
                ),
                None,
            ),
        ),
    ],
)
