tests/grammar/snapshots/r#mod__grammar__alpha034__expr_precedence-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"2 - 3 - 4\").unwrap()"
---
Statement(
    [
        Expression(
            Subtract(
                Subtract(
                    Number(
                        2.0,
                    ),
                    Number(
                        3.0,
                    ),
                ),
                Number(
                    4.0,
                ),
            ),
        ),
    ],
)
