tests/grammar/snapshots/r#mod__grammar__alpha034__expr_precedence-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"2 - (3 - 4)\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Subtract(
                            (
                                Number(
                                    (
                                        2.0,
                                        0..1,
                                    ),
                                ),
                                0..1,
                            ),
                            (
                                Parentheses(
                                    (
                                        Subtract(
                                            (
                                                Number(
                                                    (
                                                        3.0,
                                                        5..6,
                                                    ),
                                                ),
                                                5..6,
                                            ),
                                            (
                                                Number(
                                                    (
                                                        4.0,
                                                        9..10,
                                                    ),
                                                ),
                                                9..10,
                                            ),
                                        ),
                                        5..10,
                                    ),
                                ),
                                4..11,
                            ),
                        ),
                        0..11,
                    ),
                ),
                0..11,
            ),
        ],
    ),
    0..11,
)
