tests/grammar/snapshots/r#mod__grammar__alpha034__expr_precedence-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"-(2 + 3) * 5\").unwrap()"
---
Statement(
    [
        Expression(
            Multiply(
                Neg(
                    Parentheses(
                        Add(
                            Number(
                                2.0,
                            ),
                            Number(
                                3.0,
                            ),
                        ),
                    ),
                ),
                Number(
                    5.0,
                ),
            ),
        ),
    ],
)
